--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--
-  Mega Mecha Overdrive: Golden - Character Sheet
+  Mega Mecha Overdrive: EdgeLords - Character Sheet
   ============================================
   A dynamic character sheet web application for the Mega Mecha Overdrive: Golden tabletop RPG system.
   Features include:
@@ -14,7 +14,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mega Mecha Overdrive: Golden</title>
+  <title>Mega Mecha Overdrive: EdgeLords</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -23,7 +23,7 @@
   <main>
 
     <section class="title">
-      <h1>Mega Mecha Overdrive: <span>Golden</span></h1>
+      <h1>Mega Mecha Overdrive: <span>EdgeLords</span></h1>
     </section>
 
     <!-- Character Information Section: Contains player details, character name, rank selection -->
@@ -103,7 +103,7 @@
        </section>
 
        <section id="mechCarouselWrapper" class="carousel-wrapper">
-        <h2 class="carousel-title">Choose your rig</h2>
+        <h2 class="carousel-title">Choose your EdgeRunner</h2>
         <div id="mechCarousel" class="carousel">
           <div class="carousel-track">
             <!-- Each .carousel-item is one of background card -->
