--- a/index.html
+++ b/index.html
@@ -224,7 +224,32 @@
   <!-- Roll Results Display: Container for showing dice roll results, criticals, and stat evolutions
        Popups fade out automatically after displaying -->
   <div id="popupContainer"></div>
-
+<!--
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    import {
+      getAuth,
+      createUserWithEmailAndPassword,
+    } from 'https://www.gstatic.com/firebasejs/11.9.0/firebase-auth.js';
+    import { getFirestore } from 'https://www.gstatic.com/firebasejs/11.9.0/firebase-firestore.js';
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyDHOwOzz83Ua5ZNk7VaKbuv2ZI-XvhJl-c",
+      authDomain: "mega-mecha-sheet.firebaseapp.com",
+      projectId: "mega-mecha-sheet",
+      storageBucket: "mega-mecha-sheet.firebasestorage.app",
+      messagingSenderId: "1062382078139",
+      appId: "1:1062382078139:web:82d439a151a053c282419e"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
+-->
   <script src="script.js"></script>
 </body>
 </html>
