--- a/index.html
+++ b/index.html
@@ -201,25 +201,39 @@
   </main>
 
   <aside class="aside-bar">
-    <section id="hpSection" class="hp-section">
-      <h3>HP:</h3>
-      <div id="hpContainer" class="hp-container"></div>
-      <label for="shieldToggle" class="shield-toggle">
-        <input type="checkbox" name="shieldToggle" id="shieldToggle">
-        Shield Active
-      </label>
-    </section>
-    <!-- enables editing stat die manually -->
-    <div class="field-group manual-toggle">
-      <label for="manualToggle">Modify Stat Die: 
-        <input type="checkbox" name="" id="manualToggle">
-      </label>
+    <div class="aside-bar-content">
+      <section id="hpSection" class="hp-section">
+        <h3>HP:</h3>
+        <div id="hpContainer" class="hp-container"></div>
+        <label for="shieldToggle" class="shield-toggle">
+          <input type="checkbox" name="shieldToggle" id="shieldToggle">
+          Shield Active
+        </label>
+      </section>
+      <section id="roll-log" class="inactive">
+        <div id="logControls">
+          <p id="rollLog">Roll Log:</p>
+          <button id="logClose">
+            <?xml version="1.0" encoding="utf-8"?><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 122.878 122.88" enable-background="new 0 0 122.878 122.88" xml:space="preserve"><g><path d="M1.426,8.313c-1.901-1.901-1.901-4.984,0-6.886c1.901-1.902,4.984-1.902,6.886,0l53.127,53.127l53.127-53.127 c1.901-1.902,4.984-1.902,6.887,0c1.901,1.901,1.901,4.985,0,6.886L68.324,61.439l53.128,53.128c1.901,1.901,1.901,4.984,0,6.886 c-1.902,1.902-4.985,1.902-6.887,0L61.438,68.326L8.312,121.453c-1.901,1.902-4.984,1.902-6.886,0 c-1.901-1.901-1.901-4.984,0-6.886l53.127-53.128L1.426,8.313L1.426,8.313z"/></g></svg>
+          </button>
+          <button id="logOpen">
+            <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 345.51"><path fill-rule="nonzero" d="M3.95 314.94 240.74 7.7c1.02-1.39 2.24-2.65 3.67-3.75 8.27-6.39 20.17-4.87 26.56 3.41l236.11 306.4c3.06 3.37 4.92 7.84 4.92 12.75 0 10.49-8.51 19-19 19H18.93v-.06a18.9 18.9 0 0 1-11.57-3.95c-8.28-6.39-9.8-18.29-3.41-26.56z"/></svg>
+          </svg></button>
+        </div>
+      </section>
+      <!-- enables editing stat die manually -->
+      <div class="field-group manual-toggle">
+        <label for="manualToggle">Manual Stats: 
+          <input type="checkbox" name="" id="manualToggle">
+        </label>
+      </div>
+      <!-- Stat Dice Panel: Interactive dice display showing current die size for each stat
+           Stats can evolve to larger die sizes through critical rolls -->
+      <section id="stats">
+        <!-- We’ll inject one die “button” per stat here via JavaScript -->
+      </section>
     </div>
-    <!-- Stat Dice Panel: Interactive dice display showing current die size for each stat
-         Stats can evolve to larger die sizes through critical rolls -->
-    <section id="stats">
-      <!-- We’ll inject one die “button” per stat here via JavaScript -->
-    </section>
+    <div id="logTextContainer"></div>
   </aside>
 
   <!-- Roll Results Display: Container for showing dice roll results, criticals, and stat evolutions
